update logic update status of image
